deprecated methods has been add in jdk 11